//go:generate protoc --gogofaster_out=. internal.proto

syntax = "proto3";
package internal;

message Branch {
  string ID = 1;
  string Name = 2;
  string AuthHost = 3;
  string EncToken = 4;
  int64 CreateTime = 5;
}

